base/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
  labels:
    app: dashboard
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: dashboard
